immich/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: immich
  template:
    metadata:
      labels:
        app: immich
    spec:
      containers:
        - name: immich
          image: ghcr.io/immich-app/immich-server:release
          ports:
            - containerPort: 2283
          volumeMounts:
            - mountPath: /usr/src/app/upload
              name: immich-pvc
      volumes:
        - name: immich-pvc
          hostPath:
            path: /mnt/data/immich
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-ml
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: immich-ml
  template:
    metadata:
      labels:
        app: immich-ml
    spec:
      containers:
        - name: immich-ml
          image: ghcr.io/immich-app/immich-machine-learning:release
          ports:
            - containerPort: 3003
          volumeMounts:
            - mountPath: /cache
              name: immich-ml-pvc
      volumes:
        - name: immich-ml-pvc
          hostPath:
            path: /mnt/data/immich-ml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgsql
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: pgsql
  template:
    metadata:
      labels:
        app: pgsql
    spec:
      containers:
        - name: pgsql
          image: ghcr.io/immich-app/postgres:14-vectorchord0.4.3-pgvectors0.2.0
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pgsql-storage
      volumes:
        - name: pgsql-storage
          persistentVolumeClaim:
            claimName: pgsql-pvc
