immich/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich
spec:
  serviceName: immich-service
  selector:
    matchLabels:
      app: immich
  template:
    metadata:
      labels:
        app: immich
    spec:
      containers:
      - name: immich
        image: ghcr.io/immich-app/immich-server:release
        ports:
        - containerPort: 2283
        volumeMounts:
          - mountPath: /usr/src/app/upload
            name: immich-pvc
      volumes:
        - name: immich-pvc
          persistentVolumeClaim:
            claimName: immich-pvc
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich-ml
spec:
  serviceName: immich-ml-service
  selector:
    matchLabels:
      app: immich-ml
  template:
    metadata:
      labels:
        app: immich-ml
    spec:
      containers:
      - name: immich-ml
        image: ghcr.io/immich-app/immich-machine-learning:release
        ports:
        - containerPort: 3003
        volumeMounts:
          - mountPath: /cache
            name: immich-ml-pvc
      volumes:
        - name: immich-ml-pvc
          persistentVolumeClaim:
            claimName: immich-ml-pvc
