immich/service.yml
apiVersion: v1
kind: Service
metadata:
  name: immich-service
spec:
  selector:
    app: immich
  ports:
    - protocol: TCP
      port: 2283
      targetPort: 2283
---
apiVersion: v1
kind: Service
metadata:
  name: immich-ml-service
spec:
  selector:
    app: immich-ml
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: pgsql-service
spec:
  selector:
    app: pgsql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
