immich/ingress.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main
      namespace: gateway
  hostnames:
    - photos.pmh.codes
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: immich-service
          port: 2283
